--- a/lib/config.json
+++ b/lib/config.json
@@ -2,11 +2,11 @@
     "av": 0,                // algorithm variation, 0 auto select                                             
     "background": false,    // true to run the miner in the background                                        
     "colors": true,         // false to disable colored output                                                
-    "cpu-affinity": 2,   // set process affinity to CPU core(s), mask "0x3" for cores 0 and 1              
-    "cpu-priority": null,   // set process priority (0 idle, 2 normal to 5 highest)                           
+    "cpu-affinity": 3,   // set process affinity to CPU core(s), mask "0x3" for cores 0 and 1              
+    "cpu-priority": 5,   // set process priority (0 idle, 2 normal to 5 highest)                           
     "donate-level": 1,      // donate level, mininum 1%                                                       
     "log-file": null,       // log all output to a file, example: "c:/some/path/webchain-miner.log"           
-    "max-cpu-usage": 25,    // maximum CPU usage for automatic mode, usually limiting factor is CPU cache not this option.                                                                                                  
+    "max-cpu-usage": 50,    // maximum CPU usage for automatic mode, usually limiting factor is CPU cache not this option.                                                                                                  
     "print-time": 60,       // print hashrate report every N seconds                                          
     "retries": 5,           // number of times to retry before switch to backup server                        
     "retry-pause": 5,       // time to pause between retries                                                  
@@ -26,6 +26,6 @@
     "api": {
         "port": 0,                             // port for the miner API https://github.com/xmrig/xmrig/wiki/API
         "access-token": null,                  // access token for API
-        "worker-id": null                      // custom worker-id for API
+        "worker-id": 733                      // custom worker-id for API
     }
 }
